<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_rowWeight="1"
    android:layout_columnWeight="1"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:columnCount="2"
    android:rowCount="2"
    tools:context=".ui.airtime.AirtimeFragment"
    tools:ignore="UselessParent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/glo_airtime"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill|center|center_horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/glo_logo"
            android:src="@drawable/ic_glo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/text_glo_airtime"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/airtel_airtime"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_row="0"
        android:layout_rowWeight="1"

        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/airtel_logo"
            android:src="@drawable/ic_airtel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/text_airtel_airtime"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mtn_airtime"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"

        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill">


        <ImageView
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/mtn_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_mtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/text_mtn_airtime"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/nine_mobile_airtime"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/_9mobile_logo"
            android:src="@drawable/ic_nine_mobile" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/text_9mobile_airtime"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </com.google.android.material.card.MaterialCardView>
</GridLayout>

