<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".ui.airtime.PurchaseAirtimeFragment">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_network"
                android:textAppearance="?textAppearanceHeadline5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/network_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_network"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_amount_to_recharge"
                android:textAppearance="?textAppearanceHeadline5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimum_amount_req">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/text_phone_number"
                android:textAppearance="?textAppearanceHeadline5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_req">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textAppearance="?textAppearanceHeadline6"
                android:visibility="invisible"
                tools:text="Transaction Successful!"
                tools:visibility="visible" />


            <Button
                android:id="@+id/recharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/recharge"
                android:textSize="25sp" />


        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
