<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.start.StartFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/ic_svg_file"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGreetings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:textSize="26sp"
                tools:text="Hi there, Good Morning" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                app:cardBackgroundColor="@color/primaryDarkColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/account_balance"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="₦1000" />
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="4dp"
            android:text="@string/question_what_would_you_like_to_purchase"
            android:textAlignment="center"
            android:textAppearance="?textAppearanceSubtitle1"
            android:textColor="@color/black"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buy_airtime"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/buy_airtime"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/buy_data"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                app:cardBackgroundColor="@color/primaryColor"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/buy_data"
                    android:textAppearance="?textAppearanceHeadline5"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
